<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hScoreDescription"
            android:visibility="gone"
            app:srcCompat="@drawable/high_score" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreGOver"
                android:textColor="?attr/textColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultBtnValue"
                android:textColor="@android:color/holo_green_light"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PersonnalHScore"
                android:textColor="?attr/textColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/defaultBtnValue"
                android:textColor="@color/buttonColor"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btnTryAgain"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_btn"
                android:onClick="restart"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/retry"
                android:textColor="@color/buttonTextColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnMainGOver"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_btn"
                android:onClick="main"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/mainMenuBtn"
                android:textColor="@color/buttonTextColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnExitGOver"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_btn"
                android:onClick="exit"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/exitGame"
                android:textColor="@color/buttonTextColor"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>